<resources>
    <string name="app_name">LearnAndroid</string>
    <string name="email_id">Email Id</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>
    <string name="dialog_title">Dialog Title</string>
    <string name="dialog_msg">This is a dialog Message section where we can change the message anytime dynamatically.</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
</resources>